--- a/views/index.html
+++ b/views/index.html
@@ -6,13 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>server</title>
 	<link rel="shortcut icon" href="#">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
+	<header class="header">
+		<a href="/">Logo</a>
+		<nav>
+			<ul class="menu">
+				<li><a class="itemMenu" href="/"></a>Sobre</li>
+				<li><a class="itemMenu" href="/"></a>Projetos</li>
+				<li><a class="itemMenu" href="/"></a>Contato</li>
+			</ul>
+		</nav>
+	</header>
 	<main>
-		<div>
+		<div class="utils">
 			<p class="cat">Cat files <a href="https://www.freecatphotoapp.com">freeCodeCamp</a></p>
-			<a href="#"><img src="./imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
+			<a href="#"><img class="myImage someImgConf" src="./imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
 			<h2>myPhotoApp</h2>
 			<p>
 				Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
